improved upon the initial allocation sample heatmap plot, and note for the next week

--- a/schellingEntropyImproved.ipynb
+++ b/schellingEntropyImproved.ipynb
@@ -299,9 +299,7 @@
     "#random initial allocation heatmap viz\n",
     "heatmap(start_grid,title=\"random initial allocation of residents\",\n",
     "    showaxis=true,xticks=false,yticks=false,aspect_ratio=1.0,framestyle=:box,xlims=(0.5,GRID_SIZE+0.5),legend=nothing,\n",
-    "    c=ColorGradient([:yellow,:white,:blue]))\n",
-    "\n",
-    "\n"
+    "    c=ColorGradient([:yellow,:white,:blue]))\n"
    ]
   },
   {
@@ -667,8 +665,7 @@
     }
    ],
    "source": [
-    "heatmap(rand(10,10),title=\"sample\",showaxis=true,xticks=false,yticks=false,\n",
-    "    aspect_ratio=1.0,framestyle=:box,xlims=(0.5,10.5),c=ColorGradient([:yellow,:black,:blue]))\n",
+    "#macrostate function mapping (eg, what is the total satisfaction of the residents overall the cells, total sum from zero to max)\n",
     "\n",
     "\n",
     "\n"
