just some comments

--- a/schellingEntropyImproved.ipynb
+++ b/schellingEntropyImproved.ipynb
@@ -9710,6 +9710,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#now to find a model that respects an increasing entropy value trace\n",
+    "#now to do the financial part...\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [
