--- a/schellingEntropyImproved.ipynb
+++ b/schellingEntropyImproved.ipynb
@@ -11168,6 +11168,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#sample the random intializations and investigate \n",
+    "function make_random_grid()\n",
+    "    empty_grid = zeros(GRID_SIZE,GRID_SIZE)\n",
+    "    empty_grid[1:yellow_count] .= 1\n",
+    "    empty_grid[yellow_count+1:yellow_count+blue_count] .= -1\n",
+    "    random_grid = shuffle(empty_grid)\n",
+    "    return random_grid\n",
+    "end\n",
+    "numberOfRandomSamples = 2000\n",
+    "randomSatisfactions = [grid_satisfaction(make_random_grid()) for x in 1:numberOfRandomSamples]\n",
+    "normedRandomSatisfactions = randomSatisfactions ./ sum(randomSatisfactions)\n",
+    "pltHist = histogram(randomSatisfactions,bins=0:1:R_MAX,normalize=:probability,xlim=(0,R_MAX+10),title=\"density of sampled initial grid satisfactions\",xlabel=\"grid satisfaction values: R\")\n",
+    "vline!([R_MAX],line=(3,:dash),leg=false)\n",
+    "#macrostate function mapping (eg, what is the total satisfaction of the residents overall the cells, total sum from zero to max)\n",
+    "#function overall_satisfaction(start_grid)\n",
+    "\n",
+    "function grid_satisfaction(grid)\n",
+    "    cell_satisfaction = []\n",
+    "\n",
+    "    for row in 1:GRID_SIZE\n",
+    "        for col in 1:GRID_SIZE\n",
+    "            \n",
+    "            t=cell_surround_arrayTMP(grid,row,col)  #R2 = R_grid(start_grid)\n",
+    "            tmpBinary = thresholdFN(t,grid[row,col],row,col)\n",
+    "            append!(cell_satisfaction,tmpBinary)\n",
+    "        end\n",
+    "    end\n",
+    "    return sum(cell_satisfaction)\n",
+    "end\n",
+    "\n",
+    "function thresholdFN(cellSurroundArray,cellType,row,col)\n",
+    "    homogeneity = length(findall(cellType .== cellSurroundArray))\n",
+    "    #println(homogeneity)\n",
+    "    if(cellType != 0)\n",
+    "        if(!(row == 1 || row == GRID_SIZE || col == 1 || col == GRID_SIZE))#general inner body\n",
+    "            return homogeneity >= THRESHOLD_SAME ? 1 : 0\n",
+    "        elseif((row==GRID_SIZE && col==GRID_SIZE))#bottom right corner\n",
+    "            return homogeneity >= THRESHOLD_CORNER ? 1 : 0    \n",
+    "        elseif((row==1 && col==1))#top left corner\n",
+    "            return homogeneity >= THRESHOLD_CORNER ? 1 : 0\n",
+    "        elseif((row==1 && col==GRID_SIZE))#top right corner\n",
+    "            return homogeneity >= THRESHOLD_CORNER ? 1 : 0\n",
+    "        elseif((row==GRID_SIZE && col==1))#bottom left corner\n",
+    "            return homogeneity >= THRESHOLD_CORNER ? 1 : 0\n",
+    "        elseif((row==1 && (col < GRID_SIZE && col > 1) ))#top edge\n",
+    "            return homogeneity >= THRESHOLD_EDGE ? 1 : 0\n",
+    "        elseif( (row > 1 && row < GRID_SIZE) && (col == 1) )#left edge\n",
+    "            return homogeneity >= THRESHOLD_EDGE ? 1 : 0\n",
+    "        elseif( (row > 1 && row < GRID_SIZE) && (col == GRID_SIZE) )#right edge\n",
+    "            return homogeneity >= THRESHOLD_EDGE ? 1 : 0\n",
+    "        elseif( (row == GRID_SIZE) && (col > 1 && col < GRID_SIZE) )#bottom edge\n",
+    "            return homogeneity >= THRESHOLD_EDGE ? 1 : 0\n",
+    "        end\n",
+    "    else\n",
+    "        return 0\n",
+    "    end\n",
+    "end\n",
+    "function cell_surround_arrayTMP(grid,row,col)\n",
+    "    cell_surrounding = []\n",
+    "    for ii in 0:2\n",
+    "        for jj in 0:2\n",
+    "            if(!(  (ii==1 && jj==1) || (row-1+(ii) < 1) ||  (col-1+(jj) < 1) || (row-1+(ii) > GRID_SIZE) || (col-1+(jj) > GRID_SIZE)   ))\n",
+    "                append!(cell_surrounding,grid[row-1+(ii),(col-1)+(jj)])\n",
+    "            end\n",
+    "\n",
+    "        end\n",
+    "    end\n",
+    "\n",
+    "    return cell_surrounding\n",
+    "end\n",
+    "\n",
+    "R_MAX = grid_satisfaction(set_grid)\n",
+    "println(\"set grid satisfaction value MAX=\",R_MAX)\n",
+    "R_START = grid_satisfaction(start_grid)\n",
+    "println(\"set grid satisfaction value START=\",R_START)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
    "outputs": [],
